# mdt-app

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  models.py  security.py  utils.py
app/static/css/: styles.css
app/templates/: base.html  case_entry.html  case_entry_edit.html  consensus.html  index.html  login.html  mdt_details.html  patient_register.html  search_date.html  search_hn.html
mdt_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
