[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdt-app"
version = "0.1.0"
description = "Browser-based MDT workflow app (FastAPI + SQLModel)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.2",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.1.0.post1",
  "pydantic-settings>=2.5.2",
  "weasyprint>=62.3",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8000
reload = true
